<resources>
    <string name="app_name">Post !t</string>
    <string name="login_description">Please login to use Post !t</string>
    <string name="registerDescription">Please enter your account information</string>
    <string name="createAccount">Create An Account</string>
    <string name="home">Home</string>
    <string name="detail_title">%1$s\'s Post</string>
    <string name="post_as">Share post as </string>
    <string name="post_users">Create a new post</string>
    <string name="message"> </string>
    <string name="cameraChoose">Camera</string>
    <string name="galleryChoose">Gallery</string>
    <string name="descriptionStory">Description</string>
    <string name="post">Upload</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="nameUser">Name</string>
    <string name="timeCreatedContent">datetime here</string>
    <string name="email">Enter your email</string>
    <string name="emailFormatWrong">Wrong format!</string>
    <string name="emailTaken">Email was taken, try another!</string>
    <string name="password">Enter your password</string>
    <string name="passwordConfirm">Confirm your password</string>
    <string name="passwordVisible">Show Password</string>
    <string name="passwordLess">Password must be at least 6 characters</string>
    <string name="passwordNotMatch">Passwords don\'t match</string>
    <string name="login">Login</string>
    <string name="invalidLogin">Input your data correctly!</string>
    <string name="registerHeader">Create An Account</string>
    <string name="noAccount">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="nameNone">Name cannot be empty</string>
    <string name="emailNone">Email cannot be empty</string>
    <string name="passwordNone">Password cannot be empty</string>
    <string name="passwordConfirmNone">Confirm password cannot be empty</string>
    <string name="name">Enter your name</string>
    <string name="logout">Log Out</string>
    <string name="logoutDescription">Are you sure you want to log out?</string>
    <string name="SuccessLogout">Logged out</string>
    <string name="cancelLogout">Cancel</string>
    <string name="dateStory">created on:</string>
    <string name="warningAddImage">Add a photo!</string>
    <string name="warningAddDescription">Add a description!</string>
    <string name="maps">See Maps</string>
    <string name="standardMap">Standard Map</string>
    <string name="nightMap">Night Map</string>
    <string name="useMyLocation">Use my location</string>
    <string name="usePickLocation">Use the location that I pick</string>
    <string name="setLocation">Click map to set location</string>
    <string name="icon_map_pin">Icon map pin</string>
    <string name="yourLocation">Pick Your Location</string>
    <string name="start_point">Start Point</string>
    <string name="accountSuccessCreated">Account created!</string>
    <string name="tryAgain">Try Again</string>
    <string name="locationNotFound">Location not found. Try Again</string>
    <string name="useThisLocation">Use this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="itemrow">itemRow</string>
    <string name="share_your_story">Share your story!</string>
    <string name="please_login_to_use_post_t">Please login to use Post !t</string>
    <string name="welcome">Welcome!</string>
    <string name="create_an_account">Create An Account</string>
    <string name="didn_t_have_account">Didn\'t have account?</string>
    <string name="create_one">Create one!</string>
    <string name="more">More</string>
    <string name="detail">Detail</string>
    <string name="make_yourself_a_post">Make yourself a post!</string>
</resources>