<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login_to_use_post_t"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"/>

    <com.ihdyo.postit.customview.CVUsername
        android:id="@+id/RegistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription" />

    <com.ihdyo.postit.customview.CVEmail
        android:id="@+id/RegistEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/RegistName"
        app:layout_constraintStart_toStartOf="@+id/RegistName"
        app:layout_constraintTop_toBottomOf="@+id/RegistName" />

    <com.ihdyo.postit.customview.CVPassword
        android:id="@+id/RegistPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/RegistEmail"
        app:layout_constraintStart_toStartOf="@+id/RegistEmail"
        app:layout_constraintTop_toBottomOf="@+id/RegistEmail" />

    <com.ihdyo.postit.customview.CVPasswordRecheck
        android:id="@+id/RetypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="12dp"
        android:hint="@string/passwordConfirm"
        app:layout_constraintEnd_toEndOf="@+id/RegistPassword"
        app:layout_constraintStart_toStartOf="@+id/RegistPassword"
        app:layout_constraintTop_toBottomOf="@+id/RegistPassword" />

    <CheckBox
        android:id="@+id/seeRegistPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/passwordVisible"
        app:layout_constraintEnd_toEndOf="@+id/RetypePassword"
        app:layout_constraintTop_toBottomOf="@+id/RetypePassword" />

    <Button
        android:id="@+id/btnRegistAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginBottom="36dp"
        android:layout_marginHorizontal="36dp"
        android:text="@string/create_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>