<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login_to_use_post_t"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tvLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"/>

    <com.ihdyo.postit.customview.CVEmail
        android:id="@+id/CVEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="36dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription"/>

    <com.ihdyo.postit.customview.CVPassword
        android:id="@+id/PasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="12dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/CVEmail"
        app:layout_constraintStart_toStartOf="@+id/CVEmail"
        app:layout_constraintTop_toBottomOf="@+id/CVEmail"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:layout_marginBottom="12dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/tvRegistDescription"
        app:layout_constraintEnd_toEndOf="@+id/PasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/PasswordLogin" />

    <TextView
        android:id="@+id/tvRegistDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:text="@string/didn_t_have_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        android:layout_marginBottom="36dp"/>

    <CheckBox
        android:id="@+id/seePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/passwordVisible"
        app:layout_constraintEnd_toEndOf="@+id/PasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/PasswordLogin"
        tools:alpha="1" />

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/create_one"
        android:textColor="@color/teal_200"
        app:layout_constraintStart_toEndOf="@+id/tvRegistDescription"
        app:layout_constraintTop_toTopOf="@+id/tvRegistDescription" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>