<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddStoryActivity">

    <Button
        android:id="@+id/btnPostStory"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="36dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageStoryUpload"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:paddingHorizontal="36dp"
        android:text="@string/cameraChoose"
        app:layout_constraintEnd_toStartOf="@+id/galleryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="36dp"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:text="@string/galleryChoose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/imageStoryUpload" />

        <EditText
            android:id="@+id/tv_des"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:layout_marginBottom="36dp"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Description"
            android:background="@drawable/border"
            android:gravity="top|left"
            android:hint="@string/descriptionStory"
            android:inputType="textMultiLine"
            android:maxHeight="180dp"
            android:maxLines="8"
            android:padding="15dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnPostStory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded" />

    <ProgressBar
        android:id="@+id/progressBarAddStory"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tv_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton">

        <ImageView
            android:id="@+id/imageLocation"
            android:layout_width="37dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/icon_map_pin"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/detailLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:maxLines="3"
            android:text="@string/yourLocation" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>