<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="24dp"
        android:layout_marginHorizontal="36dp"
        android:layout_marginVertical="12dp"
        card_view:cardCornerRadius="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="24dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                app:cardElevation="12dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageStory"
                    android:layout_width="match_parent"
                    android:layout_height="236dp"
                    android:contentDescription="@string/itemrow"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/spirited_away" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/authorStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/dateStory"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="@string/nameUser" />

            <TextView
                android:id="@+id/dateStory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/authorStory"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/authorStory"
                tools:text="@string/timeCreatedContent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>